--- a/src/components/Buttons.css
+++ b/src/components/Buttons.css
@@ -1,8 +1,23 @@
-.buttonBox {
-    align-content: center;
-    justify-content: center;
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-bottom: 10%;
-    background-color: #000;
+button {
+    width: 50px;
+    height: 50px;
+    margin-left: 5px;
+    margin-top: 5px;
+    padding: 0;
+    cursor: pointer;
+    background-color: rgb(31, 30, 30);
+    font-size: 24px;
+    font-weight: 100;
+    color: #ffffff;
+    border-radius: 50%;
+}
+
+.color{
+    background-color: rgb(255, 89, 0); 
+    color: #FFF;
+}
+
+.light {
+    background-color: rgb(143, 142, 142);
+    color: #000;
 }
