--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Helvetica&display=swap");
+
+*{
+  margin: 0;
+  padding: 0;
+  font-family: "Helvetica", sans-serif;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont,'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
 }
 
 code {
