--- a/src/components/Screen.css
+++ b/src/components/Screen.css
@@ -4,7 +4,8 @@
     background-color: #000;
     color: #FFF;
     display: flex;
+    align-items: center;
     justify-content: flex-end;
-    font-size: 53px;
     font-weight: bold;
+    box-sizing: border-box;
 }
