--- a/src/components/Container.css
+++ b/src/components/Container.css
@@ -1,7 +1,4 @@
 .container {
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    border-radius: 10px;
-    background-color: #000;
+    padding: 10px;
+    background-color: #fff;
 }
