--- a/src/components/ButtonBox.css
+++ b/src/components/ButtonBox.css
@@ -7,4 +7,7 @@
     grid-template-rows: repeat(5, 1fr);
     grid-gap: 10px;
     background-color: #000;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-bottom: 10px;
 }
