--- a/src/components/Buttons.css
+++ b/src/components/Buttons.css
@@ -2,8 +2,6 @@ button {
     width: 50px;
     height: 50px;
     margin-left: 5px;
-    margin-top: 5px;
-    padding: 0;
     cursor: pointer;
     background-color: rgb(31, 30, 30);
     font-size: 24px;
@@ -20,4 +18,11 @@ button {
 .light {
     background-color: rgb(143, 142, 142);
     color: #000;
+}
+
+.large {
+    width:120px;
+    grid-column: 1 / 3;
+    border-radius: 20px;
+    padding-right: 50px;
 }
