--- a/src/components/Screen.css
+++ b/src/components/Screen.css
@@ -8,5 +8,5 @@
     justify-content: flex-end;
     font-weight: bold;
     box-sizing: border-box;
-    padding: 10px;
+    padding-right: 20px;
 }
